--- a/USER.html
+++ b/USER.html
@@ -63,18 +63,91 @@
         100% {
             transform: scale(0);
         }}
-        .main{
-            width: 70%;
-            margin-left: 15%;
-            margin-top: 4%;
-            border-radius: 5px;
-            height: 550px;
-            border-radius: 10px;
+
+        .header{
+            height:26vh;
+            width:100%;
+            background-image: url("banner3.jpg");
+            background-size: cover;
+            padding-top: 100px;
+            margin-top: -30px;
         }
-        body{
-            background-image: linear-gradient(180deg, rgb(0, 0, 95), black);
-            background-size: 100% 115%;
+        h1{
+            margin-left: 90px;
+            font-size: 65px;
+            background: linear-gradient(rgb(255, 255, 255), rgb(54, 54, 54));
+            -webkit-background-clip:text;
+            -webkit-text-fill-color: transparent;
+            
         }
+        .main{  
+            height:100%;
+            width: 100%;
+            background: linear-gradient(#051f30, #000000);
+            display: flex;
+        }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .menu {
+            align-items: flex-start;
+            margin-top:-22vh;
+            position: sticky;
+            top: 0;
+            height: 661px;
+            transition: .3s;
+            background: #ffffff12;
+            padding: 200px 20px 20px 0;
+            width: 85px;
+            box-shadow: 8px 0px 9px 0px #00000014;
+            backdrop-filter: blur(5px);
+        }
+
+        .menu:hover {
+            width: 260px;
+        }
+
+        .menu:hover li span:nth-child(2) {
+            display: block;
+        }
+
+        .menu-content li {
+            list-style: none;
+            border-radius: 0px 50px 50px 0;
+            transition: .3s;
+            margin-bottom: 50px;
+            padding-left: 20px;
+        }
+
+        .menu-content li:hover {
+            background: #0c0c0c;
+        }
+
+        .menu-content li span:nth-child(2) {
+            display: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: rgb(213, 213, 213);
+            display: flex;
+            align-items: center;
+            font-family: 'calibri';
+        }
+
+        .material-symbols-outlined {
+            font-size: 25px;
+            margin-right: 10px;
+            background: #0c0c0c;
+            border-radius: 50%;
+            padding: 5px;
+        }
+        #icon{
+            width: 40px
+        }
+
     </style>
     <body>
         <script>
@@ -96,8 +169,23 @@
             <div class="wave"></div>
         </div>
         <div style="font-family: Arial, Helvetica, sans-serif;">
+            <div>
+                <div class="header">
+                    <h1>App Store Management</h1>
+                </div>
+            </div>
             <div class="main">
-                
+                <div class="menu">
+                    <ul class="menu-content">
+                        <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="home.png"> </span><span>Home</span></a></li>
+        <!--            <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="home.png"> </span><span>DashBoard</span></a></li>
+                        <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="explore.png"> </span><span>Explore</span></a></li>  -->
+                        <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="acc.png"> </span><span>Account</span></a></li>
+                        <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="contat.png"> </span><span>Contact</span></a></li>
+                        <li><a href="#"><span class="material-symbols-outlined"><img id="icon" src="exit.png"> </span><span>Exit</span></a></li>
+                    </ul>
+                </div>
+                <!--<div><img style="filter: blur(5px); width: 100%; height: 100%;" src="cat.jpeg"></div>-->
             </div>
         </div>
     </body>
