--- a/LOGIN.html
+++ b/LOGIN.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html style="background-image: linear-gradient(235deg, rgb(153, 153, 153), rgb(214, 214, 214)); height:100%">
     <head>
         <title>PROJECT</title>
     </head>
@@ -9,6 +9,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        overflow: hidden;
         }
         .center {
         height: 100vh;
@@ -17,6 +18,9 @@
         align-items: center;
         background: #000;
         }
+        .no-scroll{
+            overflow: hidden !important;
+        } 
         .wave {
         width: 5px;
         height: 100px;
@@ -63,6 +67,9 @@
         100% {
             transform: scale(0);
         }}
+        .mainmain{
+            position: relative;
+        }
         .main{
             background-color: white;
             width: 70%;
@@ -71,12 +78,33 @@
             border-radius: 5px;
             height: 570px;
             border-radius: 10px;
-            box-shadow: 0 10px 20px rgb(0 0 0/0.5)
+            box-shadow: 0 10px 20px rgb(0 0 0/0.5);}
+        #old{
+            display: block;
+        }
+        #new{
+            display: none;
         }
         .column{
             padding:10px;
             height: 550px;
             width: 60%
+        }
+        .column.form{
+            width: 90%; 
+            padding-right:30px; 
+            padding-top: 5vh;
+        }
+        .column.xtra{
+            background-size: 100% 100%; 
+            background-repeat: no-repeat; 
+            background-image: url('lolijojo.gif');
+        }
+        #oldxtra{
+            border-radius: 0px 10px 10px 0px; 
+        }
+        #newxtra{
+            border-radius: 10px 0px 0px 10px; 
         }
         label{
             font-size: 90%;
@@ -84,7 +112,7 @@
         input{
             width: 95%;
         }
-        #login{
+        .login{
             margin-left: 2%;
             border-radius: 50px;
             background-color:#ebebeb ; 
@@ -132,22 +160,55 @@
         } 
         body{
             background-size: 100% 200% ; 
-            background-image: linear-gradient(235deg, rgb(153, 153, 153), rgb(214, 214, 214));
+        }
+        h2{
+            font-size:xx-large; 
+            text-align: center; 
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+            margin-left: 10px;
+        }
+        .switch{
+            width:30%; 
+            margin-top: 5%;
+            margin-left: 36%;
+            background-color: transparent;
+            border: transparent;
+            font-size: 15px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 500;
         }
 
     </style>
     <body>
         <script>
             setTimeout(() => {
-            const box = document.getElementById('loading');
-            loading.style.display = 'none';
-            }, 200);
+                const box = document.getElementById('loading');
+                loading.style.display = 'none';
+            }, 2000);
             function redirect()
             {
-            if(document.getElementById("here").checked == true)
-                    window.location.href = 'DEV.html';
-            else if(document.getElementById("here").checked == false)
-                    window.location.href = 'USER.html';        
+                    if(document.getElementById("here").checked == true)
+                            window.location.href = 'DEV.html';
+                    else if(document.getElementById("here").checked == false)
+                            window.location.href = 'USER.html';   
+                
+            }
+            function showhide(){
+                var x = document.getElementById('old');
+                var y = document.getElementById('new');
+                var dispx = window.getComputedStyle(x).display;
+                var dispy = window.getComputedStyle(y).display;
+                if(x.style.display == 'block'){
+                    x.style.display = 'none';           //why me gay
+                    y.style.display = 'block';
+                }
+                else{
+                    y.style.display = 'none';
+                    x.style.display = 'block';
+                }
+            }
+            function show(main_area) {
+                document.getElementById('mainmain').innerHTML = document.getElementById(main_area).innerHTML;
             }
         </script>
         <div id="loading" class="center">
@@ -162,16 +223,43 @@
             <div class="wave"></div>
             <div class="wave"></div>
         </div>
-        <div style="font-family: Arial, Helvetica, sans-serif;">
-            <div class="main">
-                <form action="#" methods="get">
+        <div id="mainmain" style="font-family: Arial, Helvetica, sans-serif;">
+            <div class="main" id="old">
                     <div style=" display: flex;">
-                        <div class="column left" style="width: 90%; padding-right:30px ; padding-top: 60px;" >
-                            <h2 style="font-size:xx-large; text-align: center; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; margin-left: 10px;">LOGIN TO YOUR ACCOUNT</h2>
-                            <input id="login" placeholder="Email" name="FName" type="email" required><br><br>
-                            <input id="login" placeholder="Password" name="FName" type="password" required><br><br>
+                        <div class="column form" id="logform">
+                            <h2>LOGIN TO YOUR ACCOUNT</h2>
+                            <form action=""methods="post">
+                            <input class="login" placeholder="Email" name="FName" type="email" required><br><br>
+                            <input class="login" placeholder="Password" name="FName" type="password" required><br><br>
                             <label style="margin-left: 3%;">Developer Access</label>
-                            <input style="height: 15px; width: 15px;" id="here" type="checkbox" value="Dev Access"><br><br>
+                            <input style="height: 15px; width: 15px;" id="here" type="checkbox" value="Dev Access">
+                            <input id="button" name="but" type="submit" value="LOGIN">
+                            <h4 style="text-align: center; color: #929292;">----------------------LOGIN WITH OTHERS----------------------</h4>
+                            <a class="otherlog" href="https://mail.google.com">
+                                <img src="gmailbw.png" class="icon" id="gmail">
+                            </a>
+                            <a class="otherlog" href="https://www.facebook.com/">
+                                <img src="fbbw.png" class="icon" id="fb">
+                            </a>
+                        </form>
+                        <form id="idk">
+                            <input type="button" class="switch" id="newuse" value="New User?" onclick="showhide()"><br><br>
+                        </form>
+                        </div>
+                        <div class="column xtra" id="oldxtra">  
+                        </div>
+                    </div>
+            </div>
+            <div class="main" id="new">
+                <div style=" display: flex;">
+                    <div class="column xtra" id="newxtra">  
+                    </div>
+                     <div class="column form" id="newform">
+                        <h2 >CREATE NEW ACCOUNT</h2>
+                         <form action="register" methods="get">
+                            <input class="login" placeholder="Username" name="name" type="text" required><br><br>
+                            <input class="login" placeholder="Email" name="mail" type="email" required><br><br>
+                            <input class="login" placeholder="Password" name="pwd" type="password" required><br><br>
                             <input id="button" name="but" type="submit" value="LOGIN" onclick="redirect()">
                             <h4 style="text-align: center; color: #929292;">----------------------LOGIN WITH OTHERS----------------------</h4>
                             <a class="otherlog" href="https://mail.google.com">
@@ -180,11 +268,12 @@
                             <a class="otherlog" href="https://www.facebook.com/">
                                 <img src="fbbw.png" class="icon" id="fb">
                             </a>
-                        </div>
-                        <div class="column right" style="border-radius: 0px 10px 10px 0px; background-size: 100% 100%; background-repeat: no-repeat; background-image: url('lolijojo.gif');">  
-                        </div>
-                    </div>
-                </form>
+                        </form>
+                        <form id="idk">
+                            <input type="button" class="switch" id="olduse" value="Existing User?" onclick="showhide()"><br><br>
+                        </form>
+                     </div>
+                  </div>
             </div>
         </div>
     </body>
