--- a/logindev.html
+++ b/logindev.html
@@ -11,62 +11,7 @@
         box-sizing: border-box;
         overflow: hidden;
         }
-        .center {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #000;
-        }
-        .no-scroll{
-            overflow: hidden !important;
-        } 
-        .wave {
-        width: 5px;
-        height: 100px;
-        background: linear-gradient(45deg, cyan, #fff);
-        margin: 10px;
-        animation: wave 1s linear infinite;
-        border-radius: 20px;
-        }
-        .wave:nth-child(2) {
-        animation-delay: 0.1s;
-        }
-        .wave:nth-child(3) {
-        animation-delay: 0.2s;
-        }
-        .wave:nth-child(4) {
-        animation-delay: 0.3s;
-        }
-        .wave:nth-child(5) {
-        animation-delay: 0.4s;
-        }
-        .wave:nth-child(6) {
-        animation-delay: 0.5s;
-        }
-        .wave:nth-child(7) {
-        animation-delay: 0.6s;
-        }
-        .wave:nth-child(8) {
-        animation-delay: 0.7s;
-        }
-        .wave:nth-child(9) {
-        animation-delay: 0.8s;
-        }
-        .wave:nth-child(10) {
-        animation-delay: 0.9s;
-        }
-
-        @keyframes wave {
-        0% {
-            transform: scale(0);
-        }
-        50% {
-            transform: scale(1);
-        }
-        100% {
-            transform: scale(0);
-        }}
+        
         .mainmain{
             position: relative;
         }
@@ -98,7 +43,7 @@
         .column.xtra{
             background-size: 100% 100%; 
             background-repeat: no-repeat; 
-            background-image: url('lolijojo.gif');
+            background-image: url('homi.gif');
         }
         #oldxtra{
             border-radius: 0px 10px 10px 0px; 
@@ -118,7 +63,7 @@
             background-color:#ebebeb ; 
             padding-left: 20px;
         }
-        input, select{
+        input{
             height:35px;
             border-color: rgb(200, 200, 200);
             border-style:solid;
@@ -168,13 +113,13 @@
             margin-left: 10px;
         }
 
-        #dev{
+        #user{
             color: rgb(90, 90, 90);
             font-size: large;
             font-weight: 200;
             text-decoration: none;
-            margin-left: 73%;
-            margin-top: 100px;
+            margin-left: 81%;
+            ;
         }
 
         .switch{
@@ -183,7 +128,7 @@
             margin-left: 36%;
             background-color: transparent;
             border: transparent;
-            font-size: 20px;
+            font-size: 15px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-weight: 500;
         }
@@ -191,10 +136,6 @@
     </style>
     <body>
         <script>
-            setTimeout(() => {
-                const box = document.getElementById('loading');
-                loading.style.display = 'none';
-            }, 1000);
             function redirect()
             {
                     if(document.getElementById("here").checked == true)
@@ -221,55 +162,15 @@
                 document.getElementById('mainmain').innerHTML = document.getElementById(main_area).innerHTML;
             }
         </script>
-        <div id="loading" class="center">
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-        </div>
         <div id="mainmain" style="font-family: Arial, Helvetica, sans-serif;">
             <div class="main" id="old">
                     <div style=" display: flex;">
                         <div class="column form" id="logform">
-                            <h2>LOGIN TO YOUR ACCOUNT</h2>
+                            <h2>LOGIN TO DEV ACCOUNT</h2>
                             <form action=""methods="post">
-                                <input class="login" placeholder="Email" name="FName" type="email" required><br><br>
-                                <input class="login" placeholder="Password" name="FName" type="password" required><br><br>
-                                <input id="button" name="but" type="submit" value="LOGIN">
-                                <h4 style="text-align: center; color: #929292;">----------------------LOGIN WITH OTHERS----------------------</h4>
-                                <a class="otherlog" href="https://mail.google.com">
-                                    <img src="gmailbw.png" class="icon" id="gmail">
-                                </a>
-                                <a class="otherlog" href="https://www.facebook.com/">
-                                    <img src="fbbw.png" class="icon" id="fb">
-                                </a>
-                            </form>
-                            <form id="idk">
-                                <input type="button" class="switch" id="newuse" value="New User?" onclick="showhide()"><br><br>
-                            </form>
-                            <a id="dev" href="logindev.html">Developer Access</a><br>
-                        </div>
-                        <div class="column xtra" id="oldxtra">  
-                        </div>
-                    </div>
-            </div>
-            <div class="main" id="new">
-                <div style=" display: flex;">
-                    <div class="column xtra" id="newxtra">  
-                    </div>
-                     <div class="column form" id="newform">
-                        <h2 >CREATE NEW ACCOUNT</h2>
-                         <form action="register" methods="get">
-                            <input class="login" placeholder="Username" name="name" type="text" required><br><br>
-                            <input class="login" placeholder="Email" name="mail" type="email" required><br><br>
-                            <input class="login" placeholder="Password" name="pwd" type="password" required><br><br>
-                            <input id="button" name="but" type="submit" value="LOGIN" onclick="redirect()">
+                            <input class="login" placeholder="Email" name="FName" type="email" required><br><br>
+                            <input class="login" placeholder="Password" name="FName" type="password" required><br><br>
+                            <input id="button" name="but" type="submit" value="LOGIN">
                             <h4 style="text-align: center; color: #929292;">----------------------LOGIN WITH OTHERS----------------------</h4>
                             <a class="otherlog" href="https://mail.google.com">
                                 <img src="gmailbw.png" class="icon" id="gmail">
@@ -278,11 +179,11 @@
                                 <img src="fbbw.png" class="icon" id="fb">
                             </a>
                         </form>
-                        <form id="idk">
-                            <input type="button" class="switch" id="olduse" value="Existing User?" onclick="showhide()"><br><br>
-                        </form>
-                     </div>
-                  </div>
+                        <a id="user" href="LOGIN.html">User Access</a><br>
+                        </div>
+                        <div class="column xtra" id="oldxtra">  
+                        </div>
+                    </div>
             </div>
         </div>
     </body>
