--- a/LOGIN.html
+++ b/LOGIN.html
@@ -96,9 +96,11 @@
             padding-top: 5vh;
         }
         .column.xtra{
-            background-size: 100% 100%; 
+            background-size: 100% 140%; 
+            margin-top: 0;
             background-repeat: no-repeat; 
-            background-image: url('lolijojo.gif');
+            background-image: url('store1.gif');
+            object-fit: fill;
         }
         #oldxtra{
             border-radius: 0px 10px 10px 0px; 
@@ -282,7 +284,6 @@
                 document.getElementById('mainmain').innerHTML = document.getElementById(main_area).innerHTML;
             }
             
-            sessionStorage.setItem('source', 'user');
         </script>
     </body>
 </html>
