--- a/USER.html
+++ b/USER.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>USER PAGE</title>
+    <title>USER HOME</title>
     <style>
         body {
             margin: 0;
@@ -189,18 +189,19 @@
         }
         
         #acc {
-            background-image: url(confucat.jpg);
+            /*background-image: url(confucat.jpg);*/
             display: none;
         }
 
         #contat {
-            background-image: url(TheWhat.jpeg);
+       /*     background-image: url(TheWhat.jpeg);*/
             display: none;
         }
 
         #exit {
-            background-image: url(confuse.jfif);
+          /*  background-image: url(confuse.jfif);*/
             display: none;
+
         }
 
         .appbox {
@@ -212,11 +213,10 @@
         .appCard {
             display: flex;
             flex-direction: column;
-            align-items: center;
             width: 200px;
             height: 200px;
             margin: 20px;
-            padding-top : 20px;
+            padding-left : 0px;
             border-radius: 8px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0);
             background: transparent;
@@ -229,6 +229,12 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
+        .appicon{
+            width: 120px;
+            height: 120px;
+            margin-left: 40px;
+            margin-top: 10px;
+        }
         .appCard:hover {
             background-color: transparent;
             backdrop-filter: blur(20px);
@@ -240,7 +246,8 @@
             font-weight: bold;
         }
         .tile{
-            margin-top: 120px;
+            margin-top: 0;
+            margin-left: 10px;
             background-color: transparent;
             border: transparent;
             width: 180px;
@@ -249,7 +256,6 @@
             font-size: 20px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif    ;
             color: white
-            ;
         }
     </style>
 </head>
@@ -278,7 +284,7 @@
                 <li><a href="#" onclick="show('apps')"><span class="material-symbols-outlined"><img class="icon" src="apps.png"> </span><span>Apps</span></a></li>
                 <li><a href="#" onclick="show('acc')"><span class="material-symbols-outlined"><img class="icon" src="acc.png"> </span><span>Account</span></a></li>
                 <li><a href="#" onclick="show('contat')"><span class="material-symbols-outlined"><img class="icon" src="contat.png"> </span><span>Contact</span></a></li>
-                <li><a href="#" onclick="show('exit')"><span class="material-symbols-outlined"><img class="icon" src="exit.png"> </span><span>Exit</span></a></li>
+                <li><a href="LOGIN.html"><span class="material-symbols-outlined"><img class="icon" src="exit.png"> </span><span>Exit</span></a></li>
             </ul>
         </div>
         <div id="mainmain">
@@ -286,32 +292,36 @@
                 <div>
                     <form>
                         <div class="appbox" id="appContainer">
-                            <a class="appCard" href="https://chat.openai.com/" target="_blank">
+                            <a class="appCard" href="app1.html" target="_blank">
                                 <div class="appName">
-                                    <input type="text" class="tile" name="app1"> 
+                                    <img class="appicon" src="gpt.png">
+                                    <input type="text" class="tile" name="app1" value="Chat-GPT"> 
                                 </div>
                             </a>
-                            <a class="appCard" href="https://chat.openai.com/" target="_blank">
+                            <a class="appCard" href="app2.html" target="_blank">
                                 <div class="appName">
-                                    <input type="text" class="tile" name="app2"> 
+                                    <img class="appicon" src="coc.png">
+                                    <input type="text" class="tile" name="app2" value="Clash of Clans"> 
                                 </div>
                             </a>
-                            <a class="appCard" href="https://chat.openai.com/" target="_blank">
+                            <a class="appCard" href="app3.html" target="_blank">
                                 <div class="appName">
-                                    <input type="text" class="tile" name="app3"> 
+                                    <img class="appicon" src="wussup.png">
+                                    <input type="text" class="tile" name="app3" value="Whatsapp"> 
                                 </div>
                             </a>
-                            <a class="appCard" href="https://chat.openai.com/" target="_blank">
+                            <a class="appCard" href="app4.html" target="_blank">
                                 <div class="appName">
-                                    <input type="text" class="tile" name="app4"> 
+                                    <img class="appicon" style="margin-left: 30px; width: 140px;" src="tube.png">
+                                    <input type="text" class="tile" name="app4" value="YouTube"> 
                                 </div>
                             </a>
-                            <a class="appCard" href="https://chat.openai.com/" target="_blank">
+                            <a class="appCard" href="app5.html" target="_blank">
                                 <div class="appName">
                                     <input type="text" class="tile" name="app5"> 
                                 </div>
                             </a>
-                            <a class="appCard"  target="_blank">
+                            <a class="appCard" href="app6.html" target="_blank">
                                 <div class="appName">
                                     <input type="text" class="tile" name="app6"> 
                                 </div>
@@ -322,7 +332,6 @@
             </div>
             <div class="subs" id="acc"></div>
             <div class="subs" id="contat"></div>
-            <div class="subs" id="exit"></div>
         </div>
     </div>
 </div>
@@ -332,7 +341,7 @@
         loading.style.display = 'none';
     }, 100);
     function hideAll() {
-        const sections = ['apps', 'games', 'acc', 'contat', 'exit'];
+        const sections = ['apps', 'acc', 'contat'];
         sections.forEach(section => {
             document.getElementById(section).style.display = 'none';
         });
@@ -341,6 +350,7 @@
         hideAll();
         document.getElementById(sectionId).style.display = 'block';
     }
+
 </script>
 </body>
 </html>
